--- a/SpringBootPro/src/main/resources/templates/index.html
+++ b/SpringBootPro/src/main/resources/templates/index.html
@@ -13,12 +13,16 @@
 </head>
 <body>
     <p>
-        <label for="" > 转换excel点击这里:</label>
-     	<a  class="btn "  href="/convert" > 点击转换 </a>
+        <label for="" > 转换excel点击这里: </label>
+     	<a  class="btn btn-primary "  href="/convert" > 点击转换 </a>
+     	
     </p>
+    <br/>
+    <br/>
+    <br/>
     <p>
-    
-     	<button class="btn"> 点击转换2 </button>
+    	<label for="" > 查看财年统计数据: </label>
+     	<a  class="btn btn-success "  href="/do/test" > 数据查看 </a>
     </p>
    
 
