--- a/SpringBootPro/src/main/resources/templates/amount.html
+++ b/SpringBootPro/src/main/resources/templates/amount.html
@@ -73,34 +73,34 @@
                             <div class="table-responsive">
                                 <table class="table table-striped table-bordered table-hover" id="dataTables-example">
                                     <thead>
-                                        <tr>
+                                        <tr class="success ">
                                             <th>代理商</th>
                                             <th>地区</th>
                                             <th>日期</th>
-                                            <th>数量</th>
+                                            <th >数量</th>
                                             
                                         </tr>
                                     </thead>
                                     <tbody>
                                         <tr class="odd gradeX">
-                                            <td>Trident1</td>
-                                            <td>Internet Explorer 4.0</td>
-                                            <td>Win 94+</td>
-                                            <td class="center">4</td>
+                                            <td>店总</td>
+                                            <td>慈溪</td>
+                                            <td>2016-04</td>
+                                            <td class="center">25461</td>
                                             
                                         </tr>
 										<tr class="odd gradeX">
-                                            <td>Trident2</td>
-                                            <td>Internet Explorer 5.0</td>
-                                            <td>Win 95+</td>
-                                            <td class="center">5</td>
+                                            <td>vivo</td>
+                                            <td>嘉兴</td>
+                                            <td>2016-05</td>
+                                            <td class="center">987</td>
                                             
                                         </tr>
 										<tr class="odd gradeX">
-                                            <td>Trident3</td>
-                                            <td>Internet Explorer 6.0</td>
-                                            <td>Win 96+</td>
-                                            <td class="center">6</td>
+                                            <td>oppo</td>
+                                            <td>宁波</td>
+                                            <td>2016-06</td>
+                                            <td class="center">1452</td>
                                             
                                         </tr>
 
