--- a/SpringBootPro/src/main/resources/templates/index.html
+++ b/SpringBootPro/src/main/resources/templates/index.html
@@ -22,7 +22,7 @@
     <br/>
     <p>
     	<label for="" > 查看财年统计数据: </label>
-     	<a  class="btn btn-success "  href="/do/test" > 数据查看 </a>
+     	<a  class="btn btn-success "  href="/do/findall" > 数据查看 </a>
     </p>
    
 
